2010-09-04  Anthony Green  <green@moxielogic.com>

	* moxie/rtl/verilog/Makefile, moxie/rtl/verilog/cpu_decode.v,
	moxie/rtl/verilog/cpu_fetch.v, moxie/rtl/verilog/cpu_ififo.v,
	moxie/rtl/verilog/muskoka.v, moxie/rtl/verilog/testm.v: New files.

	* build.xml: Build rtems.

2010-07-30  Anthony Green  <green@moxielogic.com>

	* scripts/precheck/git-submodule-recursive-update: New file.
	* scripts/precheck/check-submodules: Use
	git-submodule-recursive-update.

	* scripts/moxie-rtems-gcc-wrapper: New file.
	* build.xml: Build moxie-rtems toolchain.

2010-03-15  Anthony Green  <green@moxielogic.com>

	* build.xml: rename gcccheck and gdbcheck to check.gcc and
	check.gdb.  Make them depend on new config.dejagnu task.
	Remove post-results task.
	Add check.binutils and check.
	* scripts/dejagnu/site.exp.in: Copy from site.exp.  Use
	@DEJAGNUDIR@, which is set by config.dejagnu.
	* scripts/dejagnu/site.exp: Delete.
	* .gitignore: Ignore site.exp.

2010-03-12  Anthony Green  <green@moxielogic.com>

	* .gitmodules: Use read-only submodules for anonymous checkouts.

2010-02-25  Anthony Green  <green@moxielogic.com>

	* build.xml: Create root/usr/bin prior to running build system
	sanity checks.

2010-02-20  Anthony Green  <green@moxielogic.com>

	* scripts/moxielogic-repo/RPM-GPG-KEY-MoxieLogic: New file.
	* scripts/moxielogic-repo/moxielogic-repo.spec: New file.
	* scripts/moxielogic-repo/Moxie_Logic.repo: New file.

2010-02-03  Anthony Green  <green@moxielogic.com>

	* README: Update copyright year.

2010-02-02  Anthony Green  <green@moxielogic.com>

	* HACKING: Update directory definitions and mention ant PATH
	problem.  Also document package signing process.

2010-02-01  Anthony Green  <green@moxielogic.com>

	* scripts/moxie-elf-gdb.spec.in (%files): Install new files.

2010-01-31  Anthony Green  <green@moxielogic.com>

	* scripts/moxie-elf-qemu.spec.in (CFLAGS): Disable -Werror.

	* scripts/moxie-elf-gdb.spec.in (BuildRequires): Add dtc.
