@@ -43,6 +43,7 @@ module cpu_ififo (/*AUTOARG*/
   reg [15:0]   opcode_o;
   reg [31:0]   operand_o;
   reg [0:0]    valid_o;
+  reg [0:0]    full_o;
   reg [15:0]   buffer[3:0]; // instruction buffer
 
   assign can_write_32 = ((ptr_gap == 0) || (ptr_gap == 1) || (ptr_gap == 2));
@@ -51,9 +52,8 @@ module cpu_ififo (/*AUTOARG*/
   assign buffer_full = ptr_gap == 4;
   assign buffer_empty = ptr_gap == 0;
 
-  assign full_o = ! (can_write_32);
-  
   assign empty_o = buffer_empty;
+
     
   // This is a rediculous bit of logic.  We should try to recode the
   // moxie instructions so that we can determine the length with less
@@ -95,81 +95,107 @@ module cpu_ififo (/*AUTOARG*/
       read_ptr <= 0;
       write_ptr <= 0;
       ptr_gap <= 0;
+      full_o <= 0;
+      valid_o <= 0;
     end else begin
-      $display ("A %x buffer[read_ptr] = 0x%x", read_ptr, buffer[read_ptr][15:8]);
-      $display ("A BUFFER = 0x%x%x%x%x", buffer[0], buffer[1], buffer[2], buffer[3]);
-      if (!is_long_insn(buffer[read_ptr][15:8])) begin
-	$display ("B");
+//      $display ("A %x buffer[read_ptr] = 0x%x", read_ptr, buffer[read_ptr][15:8]);
+//      $display ("A BUFFER = 0x%x%x%x%x", buffer[0], buffer[1], buffer[2], buffer[3]);
+//      $display ("A ptr_gap = 0x%x", ptr_gap);
+      if (buffer_empty ? !is_long_insn(data_i[31:24]) : !is_long_insn(buffer[read_ptr][15:8])) begin
+//	$display ("B");
 	if (write_en_i && (!read_en_i) && (can_write_32)) begin
+	  $display ("Z");
 	  buffer[write_ptr] <= data_i[31:16];
-	  buffer[write_ptr+1] <= data_i[15:0];
-	  write_ptr <= write_ptr + 2;
-	  ptr_gap <= ptr_gap + 2;
+	  buffer[(write_ptr+1)%4] <= data_i[15:0];
+	  write_ptr <= (write_ptr + 2) % 4;
+	  valid_o <= 0;
+	  ptr_gap = ptr_gap + 2;
+	  full_o = ((ptr_gap == 3) || (ptr_gap == 4));
 	end
 	else if ((!write_en_i) && read_en_i && (can_read_16)) begin
+//	  $display ("Y");
 	  opcode_o <= buffer[read_ptr];
 	  valid_o <= 1;
-	  read_ptr <= read_ptr + 1;
-	  ptr_gap <= ptr_gap - 1;
+	  read_ptr <= (read_ptr + 1) % 4;
+	  ptr_gap = ptr_gap - 1;
+	  full_o = ((ptr_gap == 3) || (ptr_gap == 4));
 	end
 	else if (write_en_i && read_en_i && buffer_empty) begin
-	  buffer[write_ptr] <= data_i[31:16];
-	  buffer[write_ptr+1] <= data_i[15:0];
-	  write_ptr <= write_ptr + 2;
-	  valid_o <= 0;
+//	  $display ("X");
+	  opcode_o <= data_i[31:16];
+	  buffer[0] <= data_i[15:0];
+	  write_ptr <= 1;
+	  read_ptr <= 0;
+	  ptr_gap = 1;
+	  full_o = ((ptr_gap == 3) || (ptr_gap == 4));
+	  valid_o <= 1;
 	end
 	else if (write_en_i && read_en_i && buffer_full) begin
+	  $display ("W- ERROR");
 	  opcode_o <= buffer[read_ptr];
 	  valid_o <= 1;
-	  read_ptr <= read_ptr + 1;
-	  ptr_gap <= ptr_gap - 1;
+	  read_ptr <= (read_ptr + 1) % 4;
+	  ptr_gap = ptr_gap - 1;
+	  full_o = ((ptr_gap == 3) || (ptr_gap == 4));
 	end
 	else if (write_en_i && read_en_i && (can_write_32) && (can_read_16)) begin
+//	  $display ("V");
 	  buffer[write_ptr] <= data_i[31:16];
-	  buffer[write_ptr+1] <= data_i[15:0];
-	  write_ptr <= write_ptr + 2;
+	  buffer[(write_ptr+1)%4] <= data_i[15:0];
+	  write_ptr <= (write_ptr + 2) % 4;
 	  opcode_o <= buffer[read_ptr];
+	  read_ptr <= (read_ptr + 1) % 4;
 	  valid_o <= 1;
-	  ptr_gap <= ptr_gap + 1;
+	  ptr_gap = ptr_gap + 1;
+	  full_o = ((ptr_gap == 3) || (ptr_gap == 4));
+//	  #1 $display ("V - %x %x %x %x %x %x", write_en_i, read_en_i, write_ptr, read_ptr, ptr_gap, full_o);
+	end 
+	else begin
+	  full_o = ((ptr_gap == 3) || (ptr_gap == 4));
+	  #1 $display ("U - ERROR %x %x %x %x %x %x", write_en_i, read_en_i, write_ptr, read_ptr, ptr_gap, full_o);
 	end
       end else begin
-	$display ("C w %x r %x w32 %x", write_en_i, read_en_i, can_write_32);
+//	$display ("C w %x r %x w32 %x", write_en_i, read_en_i, can_write_32);
 	if (write_en_i && (!read_en_i) && (can_write_32)) begin
-	  $display ("D");
+//	  $display ("D");
 	  buffer[write_ptr] <= data_i[31:16];
 	  buffer[write_ptr+1] <= data_i[15:0];
 	  write_ptr <= write_ptr + 2;
-	  ptr_gap <= ptr_gap + 2;
+	  ptr_gap = ptr_gap + 2;
+	  full_o = ((ptr_gap == 3) || (ptr_gap == 4));
 	end
 	else if ((!write_en_i) && read_en_i && (can_read_48)) begin
-	  $display ("E");
+//	  $display ("E");
 	  opcode_o <= buffer[read_ptr];
 	  operand_o[31:16] <= buffer[read_ptr+1];
 	  operand_o[15:0] <= buffer[read_ptr+2];
 	  valid_o <= 1;
 	  read_ptr <= read_ptr + 3;
-	  ptr_gap <= ptr_gap - 3;
+	  ptr_gap = ptr_gap - 3;
+	  full_o = ((ptr_gap == 3) || (ptr_gap == 4));
 	end
 	else if (write_en_i && read_en_i && buffer_empty) begin
-	  $display ("F data = 0x%x", data_i);
+//	  $display ("F data = 0x%x", data_i);
 	  buffer[write_ptr] <= data_i[31:16];
 	  buffer[write_ptr+1] <= data_i[15:0];
 	  write_ptr <= write_ptr + 2;
-	  ptr_gap <= ptr_gap + 2;
 	  valid_o <= 0;
-	  #1 $display ("f... buffer = 0x%x%x%x%x", buffer[read_ptr], buffer[read_ptr+1], buffer[read_ptr+2], buffer[read_ptr+3]);
+	  ptr_gap = ptr_gap + 2;
+	  full_o = ((ptr_gap == 3) || (ptr_gap == 4));
+//	  #1 $display ("f... buffer = 0x%x%x%x%x", buffer[read_ptr], buffer[read_ptr+1], buffer[read_ptr+2], buffer[read_ptr+3]);
 	end
 	else if (write_en_i && read_en_i && buffer_full) begin
-	  $display ("G");
+//	  $display ("G");
 	  opcode_o <= buffer[read_ptr];
 	  operand_o[31:16] <= buffer[read_ptr+1];
 	  operand_o[15:0] <= buffer[read_ptr+2];
 	  valid_o <= 1;
 	  read_ptr <= read_ptr + 3;
-	  ptr_gap <= ptr_gap - 3;
+	  ptr_gap = ptr_gap - 3;
+	  full_o = ((ptr_gap == 3) || (ptr_gap == 4));
 	end
 	else if (write_en_i && read_en_i && (can_write_32) && (can_read_48)) begin
-	  $display ("H");
+//	  $display ("H");
 	  buffer[write_ptr] <= data_i[31:16];
 	  buffer[write_ptr+1] <= data_i[15:0];
 	  write_ptr <= write_ptr + 2;
@@ -178,35 +204,39 @@ module cpu_ififo (/*AUTOARG*/
 	  operand_o[15:0] <= buffer[read_ptr+2];
 	  read_ptr <= read_ptr + 3;
 	  valid_o <= 1;
-	  ptr_gap <= ptr_gap - 1;
+	  ptr_gap = ptr_gap - 1;
+	  full_o = ((ptr_gap == 3) || (ptr_gap == 4));
 	end
 	else if (write_en_i && read_en_i && (ptr_gap == 2)) begin
-	  $display ("I");
+//	  $display ("I");
 	  buffer[(write_ptr)%4] <= data_i[31:16];
 	  buffer[(write_ptr+1)%4] <= data_i[15:0];
-	  write_ptr <= write_ptr + 2;
+	  write_ptr <= (write_ptr + 2) % 4;
 	  opcode_o <= buffer[read_ptr];
 	  operand_o[31:16] <= buffer[(read_ptr+1)%4];
 	  operand_o[15:0] <= data_i[31:16];
-	  read_ptr <= read_ptr + 3;
+	  read_ptr <= (read_ptr + 3) % 4;
 	  valid_o <= 1;
-	  ptr_gap <= 1;
-	  #1 $display ("opcode = 0x%x, operand = 0x%x, valid = %x", opcode_o, operand_o, valid_o );
-	  #1 $display ("i... rbuffer[0x%x] = 0x%x%x%x%x", read_ptr, buffer[read_ptr], buffer[(read_ptr+1)%4], buffer[(read_ptr+2)%4], buffer[(read_ptr+3)%4]);
-	  #1 $display ("i... wbuffer[0x%x] = 0x%x%x%x%x", write_ptr, buffer[write_ptr], buffer[(write_ptr+1)%4], buffer[(write_ptr+2)%4], buffer[(write_ptr+3)%4]);
-	  #1 $display ("0x%x 0x%x 0x%x 0x%x", write_ptr, write_ptr+1, write_ptr+2, write_ptr+3);
+	  ptr_gap = 1;
+	  full_o = ((ptr_gap == 3) || (ptr_gap == 4));
+//	  #1 $display ("opcode = 0x%x, operand = 0x%x, valid = %x", opcode_o, operand_o, valid_o );
+//	  #1 $display ("i... rbuffer[0x%x] = 0x%x%x%x%x", read_ptr, buffer[read_ptr], buffer[(read_ptr+1)%4], buffer[(read_ptr+2)%4], buffer[(read_ptr+3)%4]);
+//	  #1 $display ("i... wbuffer[0x%x] = 0x%x%x%x%x", write_ptr, buffer[write_ptr], buffer[(write_ptr+1)%4], buffer[(write_ptr+2)%4], buffer[(write_ptr+3)%4]);
+//	  #1 $display ("0x%x 0x%x 0x%x 0x%x", write_ptr, write_ptr+1, write_ptr+2, write_ptr+3);
 	end
 	else if (write_en_i && read_en_i && (ptr_gap == 1)) begin
-	  $display ("J data = 0x%x", data_i);
-	  buffer[write_ptr] <= data_i[31:16];
-	  buffer[write_ptr+1] <= data_i[15:0];
-	  write_ptr <= write_ptr + 2;
-	  ptr_gap <= ptr_gap + 2;
-	  valid_o <= 0;
-	  #1 $display ("j... buffer[0x%x] = 0x%x%x%x%x", read_ptr, buffer[read_ptr], buffer[(read_ptr+1)%4], buffer[(read_ptr+2)%4], buffer[(read_ptr+3)%4]);
+//	  $display ("J data = 0x%x", data_i);
+	  opcode_o <= buffer[read_ptr];
+	  operand_o[31:16] <= data_i[31:16];
+	  operand_o[15:0] <= data_i[15:0];
+	  read_ptr <= (read_ptr + 1) % 4;
+	  valid_o <= 1;
+	  ptr_gap = 0;
+	  full_o = ((ptr_gap == 3) || (ptr_gap == 4));
+//	  #1 $display ("j... buffer[0x%x] = 0x%x%x%x%x", read_ptr, buffer[read_ptr], buffer[(read_ptr+1)%4], buffer[(read_ptr+2)%4], buffer[(read_ptr+3)%4]);
 	end 
 	else if (write_en_i && read_en_i && (ptr_gap == 3)) begin
-	  $display ("K data = 0x%x", data_i);
+//	  $display ("K data = 0x%x", data_i);
 	  buffer[write_ptr] <= data_i[31:16];
 	  buffer[write_ptr+1] <= data_i[15:0];
 	  write_ptr <= write_ptr + 2;
@@ -215,12 +245,12 @@ module cpu_ififo (/*AUTOARG*/
 	  operand_o[15:0] <= buffer[(read_ptr+2)%4];
 	  read_ptr <= read_ptr + 3;
 	  valid_o <= 1;
-	  ptr_gap <= ptr_gap - 1;
-	  #1 $display ("k... buffer[0x%x] = 0x%x%x%x%x", read_ptr, buffer[read_ptr], buffer[(read_ptr+1)%4], buffer[(read_ptr+2)%4], buffer[(read_ptr+3)%4]);
-	end else
-	  #1 $display ("L ERROR ptr_gap = 0x%x", ptr_gap);
+	  ptr_gap = ptr_gap - 1;
+	  full_o = ((ptr_gap == 3) || (ptr_gap == 4));
+//	  #1 $display ("k... buffer[0x%x] = 0x%x%x%x%x", read_ptr, buffer[read_ptr], buffer[(read_ptr+1)%4], buffer[(read_ptr+2)%4], buffer[(read_ptr+3)%4]);
+	end 
+	  else #1 $display ("L ERROR ptr_gap = 0x%x", ptr_gap);
       end  
     end
 endmodule
 
- 
